[package]
name = "path-rpc-server"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]

[dependencies]
antidote = "1.0.0"
bytes = "0.4.7"
chrono = "0.4.2"
failure = "0.1.1"
futures = "0.1.21"
http = "0.1.5"
httparse = "1.2.4"
lazy_static = "1.0.0"
num_cpus = "1.8.0"
path-rpc-common = { path = "../path-rpc-common" }
petgraph = "0.4.12"
serde = "1.0.55"
serde_derive = "1.0.55"
serde_json = "1.0.17"
time = "0.1.4"
tokio-core = "0.1.17"
tokio-io = "0.1.6"
